# transformer-monitoring

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: deploy-backend.yml  deploy-client-side.yml
client-side/: .prettierignore  .prettierrc  Dockerfile  NULL_HANDLING.md  PAGINATION_GUIDE.md  README.md  package-lock.json  package.json  vite.config.js
client-side/.github/workflow/: main.yaml
client-side/src/: App.jsx  Home.css  Home.jsx  index.css
client-side/src/api/: axiosConfig.js  imageApi.js  inspectionApi.js  transformerApi.js
client-side/src/components/: AddInspectionModal.jsx  AddTransformerModal.jsx  AnnotateImageModal.jsx  AnnotationManager.jsx  BoundingBox.jsx  EditInspectionModal.jsx  EditTransformerModal.jsx  FeedbackLogger.js  InspectionActionDropdown.jsx  InspectionDetailModal.jsx  InspectionImageDisplay.jsx  InspectionView.jsx  LoadingSpinner.jsx  NotificationManager.jsx  NotificationsPopup.jsx  Pagination.jsx  (+12 more)
cv_service/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
cv_service/config/: detection_params.json
cv_service/src/thermal_detector/: __init__.py  main.py
cv_service/src/thermal_detector/core/: __init__.py  config.py  detector.py
cv_service/src/thermal_detector/models/: __init__.py
cv_service/src/thermal_detector/utils/: __init__.py  image_utils.py
server-transformer/: .gitattributes  .gitignore  Dockerfile  FRONTEND_DATA_PERSISTENCE_FIXES.md  IMPLEMENTATION_SUMMARY.md  MAINTENANCE_RECORDS_API_DOCUMENTATION.md  MAINTENANCE_RECORDS_IMPLEMENTATION.md  PHASE_4_API_DOCUMENTATION.md  pom.xml
(+150 files in other folders)
